syntax = "proto3";
import "ConstPvpAwardTableItemEx.proto";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstPvpAwardTableProtobuf";

message	ConstPvpAwardTable  {
	repeated	ConstPvpAwardTableItemEx	items = 1;
}