syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstPvpAwardTableItemExProtobuf";

message	ConstPvpAwardTableItemEx  {
	optional	uint32	id = 1;
	optional	uint32	vectory_times = 2;
	optional	ConstPvpAwardTableItemEx.constPvpAwardTableItemExAwardFomula	award_fomula = 3;
	optional	string	award = 4;
}