syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstPvpAwardTableItemExAwardFomulaProtobuf";

message	ConstPvpAwardTableItemExAwardFomula  {
	optional	string	firstofday = 1;
	optional	string	other = 2;
}